--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,9 @@
-0.2
+0.2.0
   * Implement new rule syntax
   * Add time-aware / recurring achievements
   * Add optional authentication & authorization
-  * Introduce Goal Triggers
-  * Introduce Mobile Pushes
-  * Introduce Messages
+  * Introduce goal triggers
+  * Introduce mobile pushes
+  * Introduce messages
   * Lots of bugfixes
   * Remove Python 2.x support
